--- a/index.html
+++ b/index.html
@@ -141,16 +141,16 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/codar.png"
+            src="assets/images/yogo.png"
             alt="greeny-earth"
             loading="lazy"
             class="project-pic"
           />
-          <h3 class="project-title">Codar</h3>
+          <h3 class="project-title">Yogo</h3>
           <p class="project-details">
-           Site para empresa de desenvolvimento web.
+           Site para uma sorveteria.
           </p>
-          <a href="https://saviomrs.github.io/site_codar/" target="_blank" class="project-link"><h3>Confira!</h3></a>
+          <a href="https://saviomrs.github.io/projeto4/" target="_blank" class="project-link"><h3>Confira!</h3></a>
         </div>
       </div>
     </section>
