--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <h2>Entre em contato</h2>
       <div class="contact-form-container">
         <div class="contact-form">
-          <form action="https://formspree.io/f/xyylnggw" method="POST">
+          <form action="https://formspree.io/f/mayvyrkd" method="POST">
             <div class="form-control">
               <label for="name">Nome</label>
               <input
